unpackaged/main/default/objects/Cancelacion__c/Cancelacion__c.object-meta.xml
<CustomObject>
    <label>Cancelación Old</label>
    <nameField>
        <label>NombreObjeto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cancelaciones_Old</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>