unpackaged/main/default/objects/Cancelacion__c/fields/Apellido_Aprobador__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Aprobador__c</fullName>
    <label>Apellido Aprobador</label>
    <length>30</length>
    <type>Text</type>
</CustomField>