unpackaged/main/default/objects/Cancelacion__c/fields/Apellido_Solicitante__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Solicitante__c</fullName>
    <label>Apellido Solicitante</label>
    <length>30</length>
    <type>Text</type>
</CustomField>