unpackaged/main/default/objects/Cancelacion__c/fields/CPPTS_Estatus_Cancelacion__c.field-meta.xml
<CustomField>
    <fullName>CPPTS_Estatus_Cancelacion__c</fullName>
    <label>Estatus Cancelación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No iniciado</fullName>
            </value>
            <value>
                <fullName>Por Aprobar</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>