unpackaged/main/default/objects/Cancelacion__c/fields/CPPTS_Fecha_Cancelacion__c.field-meta.xml
<CustomField>
    <fullName>CPPTS_Fecha_Cancelacion__c</fullName>
    <label>Fecha Cancelación</label>
    <type>Date</type>
</CustomField>