unpackaged/main/default/objects/Cancelacion__c/fields/CPPTS_Numero_Reubicaciones__c.field-meta.xml
<CustomField>
    <fullName>CPPTS_Numero_Reubicaciones__c</fullName>
    <label>Número Reubicaciones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>