unpackaged/main/default/objects/Cancelacion__c/fields/CPPTS_Proceso_con_Resolicitud__c.field-meta.xml
<CustomField>
    <fullName>CPPTS_Proceso_con_Resolicitud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proceso con Resolicitud</label>
    <type>Checkbox</type>
</CustomField>