unpackaged/main/default/objects/Cancelacion__c/fields/Estatus_texto__c.field-meta.xml
<CustomField>
    <fullName>Estatus_texto__c</fullName>
    <label>Estatus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>