unpackaged/main/default/objects/Cancelacion__c/fields/Gastos_Admin_Propuesto__c.field-meta.xml
<CustomField>
    <fullName>Gastos_Admin_Propuesto__c</fullName>
    <label>Gastos Admin Propuesto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>