unpackaged/main/default/objects/Cancelacion__c/fields/Nombre_Aprobador__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Aprobador__c</fullName>
    <label>Nombre Aprobador</label>
    <length>100</length>
    <type>Text</type>
</CustomField>