unpackaged/main/default/objects/Cancelacion__c/fields/Objeto_a_Aprobar__c.field-meta.xml
<CustomField>
    <fullName>Objeto_a_Aprobar__c</fullName>
    <label>Nombre Objeto</label>
    <length>100</length>
    <type>Text</type>
</CustomField>