unpackaged/main/default/objects/Cancelacion__c/fields/Proceso__c.field-meta.xml
<CustomField>
    <fullName>Proceso__c</fullName>
    <label>Proceso</label>
    <length>50</length>
    <type>Text</type>
</CustomField>