unpackaged/main/default/objects/Cancelacion__c/fields/Razon_rechazo__c.field-meta.xml
<CustomField>
    <fullName>Razon_rechazo__c</fullName>
    <label>Razón rechazo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>