unpackaged/main/default/objects/Cancelacion__c/fields/Reembolso_Generado__c.field-meta.xml
<CustomField>
    <fullName>Reembolso_Generado__c</fullName>
    <label>Reembolso Generado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>