unpackaged/main/default/objects/Cancelacion__c/fields/Reembolso_Propuesto__c.field-meta.xml
<CustomField>
    <fullName>Reembolso_Propuesto__c</fullName>
    <label>Reembolso Propuesto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>