unpackaged/main/default/objects/Cancelacion__c/recordTypes/Cancelacion_de_Escritura.recordType-meta.xml
<RecordType>
    <fullName>Cancelacion_de_Escritura</fullName>
    <active>true</active>
    <description>Cancelacion de Escritura</description>
    <label>Cancelacion de Escritura</label>
</RecordType>