unpackaged/main/default/objects/Cancelacion__c/recordTypes/Cancelacion_Formalizacion.recordType-meta.xml
<RecordType>
    <fullName>Cancelacion_Formalizacion</fullName>
    <active>true</active>
    <description>Cancelacion Formalizacion</description>
    <label>Cancelacion Formalizacion</label>
</RecordType>