unpackaged/main/default/objects/Cancelacion__c/recordTypes/Gastos_Admin.recordType-meta.xml
<RecordType>
    <fullName>Gastos_Admin</fullName>
    <active>true</active>
    <description>Gastos Admin</description>
    <label>Gastos Admin</label>
</RecordType>